--- a/calculator.css
+++ b/calculator.css
@@ -1,3 +1,36 @@
 @charset "UTF-8";
 /* CSS Document */
 
+/* Calculator Box */
+.box {
+	/* #FF00A2 */
+	background-color: #e5e7ea;
+	height: 300px;
+	width: 250px;
+	border-radius: 10px;
+	position: relative;
+	top:80px;
+	left: 40px;
+}
+	
+/* THIS PLAY */
+.display {
+	background-color: #bfc4ce;
+	width: 220px;
+	position:relative;
+	left: 15px;
+	top: 20px;
+	hieght: 40px;
+}
+.display input {
+	position: relative;
+	left: 2px;
+	top: 2px;
+	height: 30px;
+	color:black;
+	background-color: #bccd95;
+	font-size: 21px;
+	text-align: right;
+/* Cowculate er Buttons */
+
+/* Simulate Button Press */
