--- a/calculator.css
+++ b/calculator.css
@@ -31,6 +31,25 @@
 	background-color: #bccd95;
 	font-size: 21px;
 	text-align: right;
+}
+
 /* Cowculate er Buttons */
+.keys {
+		position:relative;
+		top: 15px;
+}
+.button {
+	width:40px;
+	hieght: 30px;
+	border:none;
+	border-radius: 8px;
+	margin-left: 17px;
+	cursor: pointer;
+	border-top: 2px solid transparent;
+}
+
 
 /* Simulate Button Press */
+
+
+
