--- a/calculator.css
+++ b/calculator.css
@@ -35,21 +35,53 @@
 
 /* Cowculate er Buttons */
 .keys {
-		position:relative;
+		position: relative;
 		top: 15px;
 }
 .button {
 	width:40px;
 	hieght: 30px;
-	border:none;
+	border: none;
 	border-radius: 8px;
 	margin-left: 17px;
 	cursor: pointer;
 	border-top: 2px solid transparent;
 }
+.button.function {
+	color: white;
+	background-color: #C64F81;
+	border-bottom: black 2px solid;
+	border-top: 2px #6f6f6f solid;
+}
 
+.button.operator {
+	color: white;
+	background-color: #4d5966;
+	border-bottom: black 2px solid;
+	border-top: 2px #6f6f6f solid;
+}
+
+.button.number {
+	color: white;
+	background-color: #709lab;
+	border-bottom: black 2px solid;
+	border-top: 2px #6f6f6f solid;
+}
 
 /* Simulate Button Press */
+.function:active {
+	border-bottom: 2px #6f6f6f solid;
+	border-top: black 2px solid;
+}
 
+.operator:active {
+	border-bottom: 2px #303030 solid;
+	border-top: black 2px solid;
+}
+
+.number:active {
+	border-bottom: 2px #6f6f6f solid;
+	border-top: black 2px solid;
+}
 
 
