--- a/calculator.css
+++ b/calculator.css
@@ -7,13 +7,14 @@ body {
 /* Calculator Box */
 .box {
 	/* #FF00A2 */
-	background-color:#FFFFFF;
+	background-image: url("/images/Zoom.jpg");
+	background-size:100%;
 	height: 300px;
 	width: 250px;
 	border-radius: 10px;
 	position: relative;
 	top:80px;
-	left: 40px;
+	left: 40%;
 }
 	
 /* THIS PLAY */
